--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="30dp"
-    android:layout_marginTop="50dp"
     android:orientation="vertical">
-
+    <!--输入框-->
     <EditText
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:id="@+id/inputUrl_ET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="输入下载地址"/>
+    网络/网速
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/internet_TV"
+            android:text="网络:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/netSpeed_TV"
+            android:text="网速:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
+    </LinearLayout>
+    <!--线程数-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:textSize="20dp"
+            android:id="@+id/ThreadNum_TV"
+            android:layout_marginTop="3dp"
+            android:text="线程数:8"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+        <com.xw.repo.BubbleSeekBar
+            app:bsb_min="1"
+            app:bsb_progress="8"
+            android:id="@+id/seek_bar_ThreadNum"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_marginTop="8dp"/>
+    </LinearLayout>
+<!--    开关与退出-->
     <Button
+        android:background="#FF8080"
         android:id="@+id/action_Btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="开刷"/>
+        android:text="开始测试~"/>
 
     <Button
         android:id="@+id/dropOut_Btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="退出"/>
+<!--    Log输出-->
+    <TextView
+        android:textColor="#FF8080"
+        android:textSize="20dp"
+        android:text="Log:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/log"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:hint="输出区:"/>
 
 </LinearLayout>
